[gd_scene load_steps=6 format=3 uid="uid://bajws2su2q5vu"]

[ext_resource type="Script" path="res://RigidBody2D.gd" id="1_ecr7v"]
[ext_resource type="Texture2D" uid="uid://dohwwc06rf2oh" path="res://New Piskel (8).png" id="2_vifnw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mkcet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmif0"]
size = Vector2(10, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg4up"]
size = Vector2(1, 13)

[node name="Pumpkinenemy" type="RigidBody2D"]
script = ExtResource("1_ecr7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_mkcet")

[node name="NewPiskel(8)" type="Sprite2D" parent="."]
position = Vector2(2, 2)
texture = ExtResource("2_vifnw")
hframes = 8
vframes = 8
frame = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -6.5)
shape = SubResource("RectangleShape2D_fmif0")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(12, 4)
shape = SubResource("RectangleShape2D_kg4up")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-8, 4)
shape = SubResource("RectangleShape2D_kg4up")

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
